# Charles-mcp

./: AGENTS.md  pyproject.toml
.github/workflows/: ci.yml
charles_mcp/: __init__.py  client.py  config.py  live_state.py  server.py  utils.py
charles_mcp/analyzers/: headers.py
charles_mcp/reverse/: config.py  server.py
charles_mcp/reverse/ingest/: common.py  sources.py  xml_session.py
charles_mcp/reverse/services/: live_analysis_service.py  query_service.py  workflow_service.py
charles_mcp/reverse/services/workflows/: __init__.py  _base.py  _shared.py  api.py  login.py  signature.py
charles_mcp/reverse/storage/: sqlite_store.py
charles_mcp/schemas/: __init__.py  status.py  traffic_query.py
charles_mcp/services/: history_capture.py  live_capture.py  traffic_normalizer.py  traffic_query_orchestrator.py
charles_mcp/tools/: history.py  live.py  reset.py  tool_contract.py
tests/: test_charles_status_live.py  test_live_since_seconds.py  test_performance_regressions.py  test_tool_guidance_contract.py  test_traffic_analysis_tools.py  test_traffic_query_service.py
tests/vnext/: test_decode_formats.py  test_ingest_and_query.py  test_live_analysis_service.py  test_native_import.py  test_reverse_config.py  test_sqlite_store_perf.py  test_workflow_service.py
